--- a/app/index.html
+++ b/app/index.html
@@ -49,16 +49,53 @@
             на все вопросы
           </div>
         </div>
-
         <button class="button button--main">заказать кОНСУЛЬТАЦИЮ</button>
         <div class="promo__link">
           или
           <a href="#">Перейти в каталог</a>
         </div>
       </div>
-
     </div>
   </div>
+
+  <section class="advantages">
+    <div class="container">
+      <h3 class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</h3>
+      <div class="advantages__wrapper">
+        <div class="advantages__item">
+          <div class="advantages__img">
+            <img src="images/icons/cup.png" alt="cup">
+          </div>
+          <div class="advantages__item-title">Делимся опытом</div>
+          <p class="advantages__text">
+            Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор,
+            готовятся к соревнованиям по триатлону!
+          </p>
+        </div>
+        <div class="advantages__item">
+          <div class="advantages__img">
+            <img src="images/icons/heart.png" alt="heart">
+          </div>
+          <div class="advantages__item-title">Заботимся о здоровье</div>
+          <p class="advantages__text">
+            Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим
+            близким!
+          </p>
+        </div>
+        <div class="advantages__item">
+          <div class="advantages__img">
+            <img src="images/icons/shoe.png" alt="shoe">
+          </div>
+          <div class="advantages__item-title">Учим бегать</div>
+          <p class="advantages__text">
+            Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега <br> в России - <a href="#">I
+              LOVE
+              RUNNING</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="js/main.min.js"></script>
 </body>
