--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,23 @@
     </div>
   </section>
 
+  <div class="consultation">
+    <div class="container">
+      <h3 class="consultation__title">
+        Получите бесплатную консультацию <br> по подбору пульсометра
+      </h3>
+      <div class="consultation__descr">
+        Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
+      </div>
+      <form class="feed-form" action="#">
+        <input name="name" type="text" placeholder="Ваше имя">
+        <input name="phone" type="tel" placeholder="Ваше телефон">
+        <input name="mail" type="email" placeholder="Ваше E-mail">
+        <button class="button button--main">заказать кОНСУЛЬТАЦИЮ</button>
+      </form>
+    </div>
+  </div>
+
   <script src="js/main.min.js"></script>
 </body>
 
