--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,16 @@
     </div>
   </div>
 
+  <div class="carousel">
+    <div class="container">
+      <div class="carousel__inner">
+        <div><img src="images/slide1.png" alt="slide"></div>
+        <div><img src="images/slide2.png" alt="slide"></div>
+        <div><img src="images/slide3.png" alt="slide"></div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/main.min.js"></script>
 </body>
 
