--- a/app/index.html
+++ b/app/index.html
@@ -445,7 +445,68 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
 
+  <section class="feedback">
+    <div class="container">
+      <h3 class="feedback__title">отзывы клиентов</h3>
+      <div class="feedback__wrapper">
+        <div class="feedback__item">
+          <div class="feedback__img">
+            <img src="images/photo_1.png" alt="feedback">
+          </div>
+          <div class="feedback__item-body">
+            <div class="feedback__item-title">
+              Юлия Дашкина
+              <span>1 полумарафон</span>
+            </div>
+            <p class="feedback__text">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.
+            </p>
+            <p class="feedback__text">Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую
+              тренировку, научили
+              пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц
+              вперёд.</p>
+            <p class="feedback__text">С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
+          </div>
+        </div>
+        <div class="feedback__item">
+          <div class="feedback__img">
+            <img src="images/photo_2.png" alt="feedback">
+          </div>
+          <div class="feedback__item-body">
+            <div class="feedback__item-title">
+              Иван Сёмочкин
+              <span>2 полумарафона</span>
+            </div>
+            <p class="feedback__text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось
+              тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+            </p>
+            <p class="feedback__text">Позвонила, ребята поинтересовались моими целями и подобрали очень интересный
+              вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более
+              коротких забегов и не намерена останавливаться!</p>
+            <p class="feedback__text">Спасибо!!!</p>
+          </div>
+        </div>
+        <div class="feedback__item">
+          <div class="feedback__img">
+            <img src="images/photo_3.png" alt="feedback">
+          </div>
+          <div class="feedback__item-body">
+            <div class="feedback__item-title">
+              Ирина Иванченко
+              <span>2 полумарафона</span>
+            </div>
+            <p class="feedback__text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали
+              пульсометр, который подошёл именно под мои цели и финансовые возможности. Через некоторое время решила
+              обновить гаджет - не раздумывая обратилась туда же.
+            </p>
+            <p class="feedback__text">Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+            </p>
+            <p class="feedback__text">Новые цели - новый гаджет! Спасибо, RunSmart! </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
