--- a/app/index.html
+++ b/app/index.html
@@ -510,6 +510,21 @@
     </div>
   </section>
 
+  <footer class="footer">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122.216196148915!2d37.64613769179664!3d55.768361785875726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1615298371911!5m2!1sru!2sru"
+      width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div class="footer__info">
+      <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+      <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+      <div class="footer__social">
+        <a href="#" class="footer__social-item"><img src="images/icons/facebook.svg" alt="facebook"></a>
+        <a href="#" class="footer__social-item"><img src="images/icons/instagram.svg" alt="instagram"></a>
+        <a href="#" class="footer__social-item"><img src="images/icons/pinteres.svg" alt="pinteres"></a>
+      </div>
+    </div>
+  </footer>
+
   <script src="js/main.min.js"></script>
 </body>
 
