--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
           <a href="tel:+74999228974" class="header__phone">
             +7 (499) 922-89-74
           </a>
-          <button class="button">заказать звонок</button>
+          <button data-modal="consultation" class="button">заказать звонок</button>
         </div>
       </header>
 
@@ -49,7 +49,7 @@
             на все вопросы
           </div>
         </div>
-        <button class="button button--main">заказать кОНСУЛЬТАЦИЮ</button>
+        <button data-modal="consultation" class="button button--main">заказать кОНСУЛЬТАЦИЮ</button>
         <div class="promo__link">
           или
           <a href="#">Перейти в каталог</a>
@@ -105,10 +105,10 @@
       <div class="consultation__descr">
         Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
       </div>
-      <form class="feed-form" action="#">
-        <input name="name" type="text" placeholder="Ваше имя">
-        <input name="phone" type="tel" placeholder="Ваше телефон">
-        <input name="mail" type="email" placeholder="Ваше E-mail">
+      <form id="consultation-form" class="feed-form" action="#">
+        <input required name="name" type="text" placeholder="Ваше имя">
+        <input required name="phone" type="tel" placeholder="Ваше телефон">
+        <input required name="mail" type="email" placeholder="Ваше E-mail">
         <button class="button button--main">заказать кОНСУЛЬТАЦИЮ</button>
       </form>
     </div>
@@ -169,7 +169,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content--active">
               <img src="images/catalog.png" alt="pulsometer" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -219,7 +219,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content--active">
               <img src="images/catalog.png" alt="pulsometer" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -524,6 +524,38 @@
       </div>
     </div>
   </footer>
+
+  <div class="overlay">
+    <div class="modal" id="consultation">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Просто заполните форму заявки</div>
+      <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+      <form class="feed-form feed-form--mt25" action="#">
+        <input name="name" type="text" placeholder="Ваше имя">
+        <input name="phone" type="tel" placeholder="Ваше телефон">
+        <input name="mail" type="email" placeholder="Ваше E-mail">
+        <button class="button button--main">заказать кОНСУЛЬТАЦИЮ</button>
+      </form>
+    </div>
+
+    <div class="modal" id="order">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Ваш заказ:</div>
+      <div class="modal__descr">Пульсометр Polar FT1</div>
+      <form class="feed-form feed-form--mt25" action="#">
+        <input required name="name" type="text" placeholder="Ваше имя">
+        <input required name="phone" type="tel" placeholder="Ваше телефон">
+        <input required name="mail" type="email" placeholder="Ваше E-mail">
+        <button class="button button--main">купить</button>
+      </form>
+    </div>
+
+    <div class="modal modal--mini" id="thanks">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+      <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+    </div>
+  </div>
 
   <script src="js/main.min.js"></script>
 </body>
